<resources>
    <string name="app_name">ccr</string>
    <string name="title_home">Configurações</string>
    <string name="title_dashboard">Roteiro</string>
    <string name="title_notifications">Emergencia</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="login_google">LOGIN COM O GOOGLE</string>
    <string name="welcome_router">"Criar Roteiro"</string>

    <string name="lbl_motorista">"Caminhoneira Gold"</string>
    <string name="lbl_user_name">"Nome de Usuário"</string>
    <string name="lbl_name">"Nome"</string>
    <string name="lbl_Email">"Email"</string>
    <string name="lbl_nascismento">"Data de Nascimento"</string>
    <string name="lbl_senha">"Senha"</string>
    <string name="lbl_help">"EMERGÊNCIA"</string>


    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
